{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 535,
  "lineage": "6e777f83-46b0-cb0e-43da-a462e35f3e5e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "load-balancer-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:556298987240:targetgroup/load-balancer-target-group/e2a8821342fa5adb",
            "arn_suffix": "targetgroup/load-balancer-target-group/e2a8821342fa5adb",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:556298987240:targetgroup/load-balancer-target-group/e2a8821342fa5adb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "load-balancer-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d1f0b948a1896bd"
          },
          "dependencies": [
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "attach-ec2-instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:556298987240:targetgroup/load-balancer-target-group/e2a8821342fa5adb-20230822091530876400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:556298987240:targetgroup/load-balancer-target-group/e2a8821342fa5adb",
            "target_id": "i-0e94a74d2cba54192"
          },
          "dependencies": [
            "aws_alb_target_group.load-balancer-target-group",
            "aws_instance.cloud-migration-web-servers",
            "aws_vpc.cloud-migration-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:556298987240:targetgroup/load-balancer-target-group/e2a8821342fa5adb-20230822091531118300000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:556298987240:targetgroup/load-balancer-target-group/e2a8821342fa5adb",
            "target_id": "i-0107be47d683ea7b9"
          },
          "dependencies": [
            "aws_alb_target_group.load-balancer-target-group",
            "aws_instance.cloud-migration-web-servers",
            "aws_vpc.cloud-migration-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:556298987240:targetgroup/load-balancer-target-group/e2a8821342fa5adb-20230822091531263800000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:556298987240:targetgroup/load-balancer-target-group/e2a8821342fa5adb",
            "target_id": "i-0e411e241adc7e347"
          },
          "dependencies": [
            "aws_alb_target_group.load-balancer-target-group",
            "aws_instance.cloud-migration-web-servers",
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cloud-migration-web-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:556298987240:instance/i-0e94a74d2cba54192",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e94a74d2cba54192",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09e4de8372d44cc59",
            "private_dns": "ip-10-0-0-245.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.245",
            "public_dns": "ec2-3-236-155-123.compute-1.amazonaws.com",
            "public_ip": "3.236.155.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b7bd076681451c30",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ebdf3361e44e555",
            "tags": {
              "Name": "Web-server-1"
            },
            "tags_all": {
              "Name": "Web-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02b0ef14d30ea9b19"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-security-group",
            "aws_subnet.cloud-migration-public-subnet-1",
            "aws_vpc.cloud-migration-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:556298987240:instance/i-0107be47d683ea7b9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0107be47d683ea7b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0509f7a27adb52f94",
            "private_dns": "ip-10-0-0-149.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.149",
            "public_dns": "ec2-35-171-169-90.compute-1.amazonaws.com",
            "public_ip": "35.171.169.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03024a4c28da7e2d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ebdf3361e44e555",
            "tags": {
              "Name": "Web-server-2"
            },
            "tags_all": {
              "Name": "Web-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02b0ef14d30ea9b19"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-security-group",
            "aws_subnet.cloud-migration-public-subnet-1",
            "aws_vpc.cloud-migration-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:556298987240:instance/i-0e411e241adc7e347",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e411e241adc7e347",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-023331de8d213e500",
            "private_dns": "ip-10-0-0-49.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.49",
            "public_dns": "ec2-44-203-32-226.compute-1.amazonaws.com",
            "public_ip": "44.203.32.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-041534af20c8e0cc4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01ebdf3361e44e555",
            "tags": {
              "Name": "Web-server-3"
            },
            "tags_all": {
              "Name": "Web-server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02b0ef14d30ea9b19"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-security-group",
            "aws_subnet.cloud-migration-public-subnet-1",
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cloud-migration-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556298987240:internet-gateway/igw-0481354f3c3127d39",
            "id": "igw-0481354f3c3127d39",
            "owner_id": "556298987240",
            "tags": {
              "Name": "Cloud-Migration-Internet-Gateway"
            },
            "tags_all": {
              "Name": "Cloud-Migration-Internet-Gateway"
            },
            "vpc_id": "vpc-09d1f0b948a1896bd"
          },
          "dependencies": [
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "cloud-migration-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:556298987240:loadbalancer/app/cloud-migration-load-balancer/002056e5c5a5f223",
            "arn_suffix": "app/cloud-migration-load-balancer/002056e5c5a5f223",
            "desync_mitigation_mode": "defensive",
            "dns_name": "cloud-migration-load-balancer-296292710.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:556298987240:loadbalancer/app/cloud-migration-load-balancer/002056e5c5a5f223",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cloud-migration-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05047992368753068"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01ebdf3361e44e555"
              },
              {
                "subnet_id": "subnet-0711a6aed520c3b2c"
              }
            ],
            "subnets": [
              "subnet-01ebdf3361e44e555",
              "subnet-0711a6aed520c3b2c"
            ],
            "vpc_id": "vpc-09d1f0b948a1896bd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load-balancer-security-group",
            "aws_subnet.cloud-migration-public-subnet-1",
            "aws_subnet.cloud-migration-public-subnet-2",
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http-load-balancer-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:556298987240:listener/app/cloud-migration-load-balancer/002056e5c5a5f223/10491dfb2060ee3f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:556298987240:targetgroup/load-balancer-target-group/e2a8821342fa5adb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:556298987240:listener/app/cloud-migration-load-balancer/002056e5c5a5f223/10491dfb2060ee3f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:556298987240:loadbalancer/app/cloud-migration-load-balancer/002056e5c5a5f223",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.load-balancer-target-group",
            "aws_lb.cloud-migration-load-balancer",
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "cloud-migration-network-acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556298987240:network-acl/acl-0ad324fbcbe9ff15a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 443
              }
            ],
            "id": "acl-0ad324fbcbe9ff15a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 101,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "556298987240",
            "subnet_ids": [
              "subnet-01ebdf3361e44e555",
              "subnet-0711a6aed520c3b2c"
            ],
            "tags": {
              "Name": "Cloud-Migration-Network-ACL"
            },
            "tags_all": {
              "Name": "Cloud-Migration-Network-ACL"
            },
            "vpc_id": "vpc-09d1f0b948a1896bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.cloud-migration-public-subnet-1",
            "aws_subnet.cloud-migration-public-subnet-2",
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0481354f3c3127d39",
            "id": "r-rtb-04e57b0f24b4ff4c81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04e57b0f24b4ff4c8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cloud-migration-internet-gateway",
            "aws_route_table.cloud-migration-route-table",
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0481354f3c3127d39",
            "id": "r-rtb-04e57b0f24b4ff4c81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04e57b0f24b4ff4c8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cloud-migration-internet-gateway",
            "aws_route_table.cloud-migration-route-table",
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloud-migration-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556298987240:route-table/rtb-04e57b0f24b4ff4c8",
            "id": "rtb-04e57b0f24b4ff4c8",
            "owner_id": "556298987240",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0481354f3c3127d39",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Cloud-Migration-Route-Table"
            },
            "tags_all": {
              "Name": "Cloud-Migration-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d1f0b948a1896bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cloud-migration-internet-gateway",
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-association-to-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd36154d3e7663ce",
            "route_table_id": "rtb-04e57b0f24b4ff4c8",
            "subnet_id": "subnet-01ebdf3361e44e555"
          },
          "dependencies": [
            "aws_internet_gateway.cloud-migration-internet-gateway",
            "aws_route_table.cloud-migration-route-table",
            "aws_subnet.cloud-migration-public-subnet-1",
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-association2-to-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fb8f8abd4aa8e14",
            "route_table_id": "rtb-04e57b0f24b4ff4c8",
            "subnet_id": "subnet-0711a6aed520c3b2c"
          },
          "dependencies": [
            "aws_internet_gateway.cloud-migration-internet-gateway",
            "aws_route_table.cloud-migration-route-table",
            "aws_subnet.cloud-migration-public-subnet-2",
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556298987240:security-group/sg-02b0ef14d30ea9b19",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b0ef14d30ea9b19",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-security-group",
            "name_prefix": "",
            "owner_id": "556298987240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-security-group"
            },
            "tags_all": {
              "Name": "ec2-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d1f0b948a1896bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load-balancer-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556298987240:security-group/sg-05047992368753068",
            "description": "Terraform load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05047992368753068",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "556298987240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-migration-alb-security-group"
            },
            "tags_all": {
              "Name": "cloud-migration-alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d1f0b948a1896bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556298987240:security-group/sg-0fbb8e43dded07ab9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fbb8e43dded07ab9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "556298987240",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-security-group"
            },
            "tags_all": {
              "Name": "rds-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d1f0b948a1896bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloud-migration-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556298987240:subnet/subnet-0cda0055735a1b633",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cda0055735a1b633",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556298987240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Cloud-Migration-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Cloud-Migration-Private-Subnet-1"
            },
            "vpc_id": "vpc-09d1f0b948a1896bd"
          },
          "dependencies": [
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloud-migration-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556298987240:subnet/subnet-005f1a8ce29298f9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005f1a8ce29298f9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556298987240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Cloud-Migration-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Cloud-Migration-Private-Subnet-2"
            },
            "vpc_id": "vpc-09d1f0b948a1896bd"
          },
          "dependencies": [
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloud-migration-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556298987240:subnet/subnet-01ebdf3361e44e555",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ebdf3361e44e555",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556298987240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Cloud-Migration-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Cloud-Migration-Public-Subnet-1"
            },
            "vpc_id": "vpc-09d1f0b948a1896bd"
          },
          "dependencies": [
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloud-migration-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556298987240:subnet/subnet-0711a6aed520c3b2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0711a6aed520c3b2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "556298987240",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Cloud-Migration-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Cloud-Migration-Public-Subnet-2"
            },
            "vpc_id": "vpc-09d1f0b948a1896bd"
          },
          "dependencies": [
            "aws_vpc.cloud-migration-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloud-migration-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:556298987240:vpc/vpc-09d1f0b948a1896bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05ce56dc6aab08b48",
            "default_route_table_id": "rtb-042e1c6a30f827658",
            "default_security_group_id": "sg-077b738bcee2952f3",
            "dhcp_options_id": "dopt-ee4d7b94",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09d1f0b948a1896bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042e1c6a30f827658",
            "owner_id": "556298987240",
            "tags": {
              "Name": "Cloud-Migration-VPC"
            },
            "tags_all": {
              "Name": "Cloud-Migration-VPC"
            }
          }
        }
      ]
    }
  ]
}